--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
     "com.unity.collab-proxy": "1.2.16",
-    "com.unity.ide.rider": "1.1.4",
+    "com.unity.ide.rider": "3.0.3",
     "com.unity.ide.vscode": "1.2.1",
     "com.unity.inputsystem": "1.0.1",
     "com.unity.ml-agents": "1.0.6",
+    "com.unity.probuilder": "4.2.3",
+    "com.unity.quicksearch": "2.0.2",
     "com.unity.test-framework": "1.1.16",
     "com.unity.textmeshpro": "2.1.1",
     "com.unity.timeline": "1.2.15",
